charts of one region in one row

--- a/src/components/Charts/Charts.module.scss
+++ b/src/components/Charts/Charts.module.scss
@@ -1,7 +1,9 @@
 
 .container {
-    max-width: 600px;
-  max-height: 400px;
+  //   max-width: 500px;
+  // max-height: 300px;
+    width: 16%;
     position: relative;
-    display: flex;
+    padding: 10px;
+    display: inline-block;
 }
