charts are scallable when active -> border appears

--- a/src/components/Charts/Charts.module.scss
+++ b/src/components/Charts/Charts.module.scss
@@ -1,9 +1,8 @@
 
 .container {
-  //   max-width: 500px;
-  // max-height: 300px;
-    width: 16%;
+    width: 16.6%;
     position: relative;
     padding: 10px;
     display: inline-block;
+    cursor: pointer;
 }
