average value is shown on hover

--- a/src/components/Charts/Charts.module.scss
+++ b/src/components/Charts/Charts.module.scss
@@ -6,3 +6,11 @@
     display: inline-block;
     cursor: pointer;
 }
+
+.average {
+  position: absolute;
+  background-color: rgba(230, 230, 230, 0.7);
+  color: #626161;
+  padding: 10px;
+  border-radius:10px ;
+}
